# raytracer

./: LICENSE  README.md  raytracer.cabal
app/: Main.hs
src/: Core.hs  Render.hs
src/Illumination/: Base.hs
src/Math/: Color.hs  Ray.hs
src/Scene/: Base.hs  Monad.hs
src/Scene/Illumination/: Sky.hs
src/Scene/Material/: Diffuse.hs  Skylike.hs
src/Scene/Object/: Floor.hs  Plane.hs  SimpleSphere.hs
