name:                raytracer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/danrocag/raytracer#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Roca González
maintainer:          danielgonzalez2@student.kit.edu
copyright:           (c) 2017 Daniel Roca González
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Odph -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3
                       -pgmlo /usr/local/opt/llvm37/bin/opt-3.7
                       -pgmlc /usr/local/opt/llvm37/bin/llc-3.7
                       -fllvm
  default-extensions:  FlexibleContexts, MultiParamTypeClasses, TemplateHaskell, TypeFamilies, UnicodeSyntax, DataKinds
  exposed-modules:     Render
                     , Core
  other-modules:       Illumination.Base
                     , Scene.Base
                     , Scene.SimpleSphere
                     , Math.Ray
                     , Math.Color
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
                     , monad-par
                     , hmatrix
                     , abstract-par
  default-language:    Haskell2010

executable raytracer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 -with-rtsopts=-N
                       -pgmlo /usr/local/opt/llvm37/bin/opt-3.7
                       -pgmlc /usr/local/opt/llvm37/bin/llc-3.7
                       -fllvm
  build-depends:       base
                     , raytracer
                     , JuicyPixels
                     , hmatrix
  default-language:    Haskell2010

test-suite raytracer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , raytracer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danrocag/raytracer
