name:                raytracer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/danrocag/raytracer#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Roca González
maintainer:          danielgonzalez2@student.kit.edu
copyright:           (c) 2017 Daniel Roca González
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:        -optlo-O3
  exposed-modules:     Render
                     , Core
  other-modules:       Scene.Base
                     , Scene.Object.SimpleSphere
                     , Scene.Illumination.Sky
                     , Math.Ray
                     , Math.Color
                     , Scene.Object.Floor
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
                     , monad-par
                     , hmatrix
                     , abstract-par
  default-language:    Haskell2010

executable raytracer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -threaded -optlo-O3 -with-rtsopts=-N
  build-depends:       base
                     , raytracer
                     , JuicyPixels
                     , hmatrix
  default-language:    Haskell2010

test-suite raytracer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , raytracer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danrocag/raytracer
